[gd_scene load_steps=5 format=2]

[ext_resource path="res://Nodes/Util/StateMachine/SubStateMachineState.gd" type="Script" id=1]
[ext_resource path="res://Nodes/Util/StateMachine/State.gd" type="Script" id=2]
[ext_resource path="res://Nodes/Util/StateMachine/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://Nodes/Characters/Enemies/Puppet/AIStates/StayAndLookAtPlayer.gd" type="Script" id=4]

[node name="Combat" type="Node"]
process_priority = 1
script = ExtResource( 1 )
sub_state_machine_path = NodePath("StateMachine")

[node name="StateMachine" type="Node" parent="."]
process_priority = 1
script = ExtResource( 3 )
auto_start = false
initial_state = NodePath("StayAndLookAtPlayer")

[node name="StayAndLookAtPlayer" type="Node" parent="StateMachine"]
process_priority = 1
script = ExtResource( 4 )
processing_mode = 1
flip_delay = 0.5

[node name="RunAway" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="RunAttack" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="NormalAttack" type="Node" parent="StateMachine"]
script = ExtResource( 2 )
